# text_mining

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  authors  configure
doc/: Doxyfile.in
src/: CMakeLists.txt  main.cc
src/app/: CMakeLists.txt  main.cc  search.cc  search.hh
src/compiler/: CMakeLists.txt  main.cc
src/old_trie_array/: trie.hh
src/old_trie_no_pointer/: CMakeLists.txt  node.cc  node.hh  nodes.cc  nodes.hh
src/old_trie_vector/: CMakeLists.txt  trie.hh
src/options/: opt_parser.cc  opt_parser.hh
src/trie/: node.cc  node.hh  nodes.cc  nodes.hh  trie.cc  trie.hh
